package HealthyPets;

/**
 *FoodType är min enum-klass som används för att beskriva vilken typ av mat som djuret bör få.
 * enumklassen används i mitt interface för att skapa metoder i alla subklasserna.
 */
public enum FoodType {
    HUNDMAT,
    KATTMAT,
    ORMPELLETS
}
