@startuml

title __HEALTHYPETS's Class Diagram__\n

  namespace HealthyPets {
    abstract class HealthyPets.Animal {
        - name : String
        - weightGrams : double
        + Animal()
        + getFoodType()
        + getPortionSize()
        ~ getName()
        ~ getWeightGrams()
    }
  }
  

  namespace HealthyPets {
    class HealthyPets.Cat {
        + Cat()
        + getFoodType()
        + getPortionSize()
    }
  }
  

  namespace HealthyPets {
    class HealthyPets.Dog {
        + Dog()
        + getFoodType()
        + getPortionSize()
    }
  }
  

  namespace HealthyPets {
    enum FoodType {
      HUNDMAT
      KATTMAT
      ORMPELLETS
    }
  }
  

  namespace HealthyPets {
    interface HealthyPets.IAnimalFood {
        {abstract} + getFoodType()
        {abstract} + getPortionSize()
    }
  }
  

  namespace HealthyPets {
    class HealthyPets.PetHotel {
        {static} + main()
    }
  }
  

  namespace HealthyPets {
    class HealthyPets.Snake {
        + Snake()
        + getFoodType()
        + getPortionSize()
    }
  }
  

  HealthyPets.Animal .up.|> HealthyPets.IAnimalFood
  HealthyPets.Cat -up-|> HealthyPets.Animal
  HealthyPets.Dog -up-|> HealthyPets.Animal
  HealthyPets.Snake -up-|> HealthyPets.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
